--- a/.gitignore
+++ b/.gitignore
@@ -1,160 +1,71 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+class Atm:
+	def __init__(self, bankname):
+		self.bankname = bankname
+		self.accesscontrol()  #need card control
+		self.loop=True
 
-# C extensions
-*.so
+	def accesscontrol(self):
+		access=2
+		for i in range(0,3):
+				password=input("Please type your paswword: ")
+				if password==cardusing.password:
+					self.program()
+				elif password!=cardusing.password and access!=0:
+					print("Incorrect password. Your acces right {}".format(access))
+					access-=1
+				elif password!=cardusing.password and access==0:
+					print("Your credit card has been blocked because you've entered the password incorrectly 3 times")
+					exit()
+	def program(self):
+		select=self.menu()
+		if select==1:
+			self.balance()
+		if select==2:
+			self.debt()
+		if select==3:
+			self.withdraw()
+		if select==4:
+			self.deposit()
+		if select==5:
+			self.exit()
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+	def menu(self):
+		select=int(input("Hello! Welcome to {} Bank {} {} \n \n Please select the inquiry you want to perform!\n\n[1] Balance \n[2] Credit Card Debt\n[3] Withdraw\n[4] Deposit\n[5] Exit and taking card back\n\n Select: ".format(self.bankname,cardusing.name,cardusing.surname)))
+		while select<1 or select>5:
+			print("\n\nPlease enter a digit between 1 and 5\nReturning to main menu")
+			self.program()
+		return select
+	def balance(self):
+		print("Your balance: {}".format(cardusing.balance))
+		self.loop=False
+		self.menuback()
+	def debt(self):
+		print("Your debt: {}. Your card has {} due date.".format(cardusing.debt,cardusing.debt_date))
+		self.menuback()
+	def withdraw(self):
+		amount=int(input("Enter the amount to be withdrawn: "))
+		newamount=cardusing.balance-amount
+		if amount>cardusing.balance:
+			print("Not enough money!")
+			self.menuback()
+		else:
+			print("Take your money and count it please. Your new balance is: {}".format(newamount))
+			self.menuback()
+	def deposit(self):
+		amount2=int(input("Enter the amount o be deposited: "))
+		newamount2=cardusing.balance+amount2
+		print("Money depositing is succesfull. Your new balance: {}".format(newamount2))
+		self.menuback()
+	def exit(self):
+		print("Thank you for choosing us. Have a good day")
+		self.loop=False
+		exit()
+	def menuback(self):
+		x=int(input("For returning to main menu, please press to number 7. For exiting and taking your card, press 5. "))
+		if x==7:
+			self.program()
+		elif x==5:
+			self.exit
+bank=Atm("X")
+while bank.loop==True:
+	bank.program()
